Transform resetup to modern recipe-based system
Major improvements:
- Replace numeric task prefixes with config-based ordering (recipes.yaml)
- Add smart dependency resolution between recipes
- Create comprehensive testing infrastructure with GitHub Actions
- Add Docker-based recipe testing for all installations
- Update to Ubuntu 25.04 for all Docker containers

New features:
- Recipe management with tags and categories
- Automatic dependency installation
- Docker-based update testing (update-recipes command)
- Integration tests for full pack/unpack cycle
- Default configuration templates for testing

Recipe updates:
- Replace Postman with Bruno (modern API client)
- Replace VS Code with Cursor (AI-powered editor)
- Replace Sublime with lazygit (terminal Git UI)
- Replace TeamViewer with RustDesk (open source)
- Replace Tilix with Ghostty (GPU-accelerated terminal)
- Replace JetBrains Font with Cascadia Code Nerd Font
- Replace OpenAI package with Claude Code CLI
- Add ripgrep, jaq, gh, golang, clickup, firebase-tools

Removed recipes:
- telegram, terminal-theme, tmux, bun, appimage-launcher, cody-app

Testing:
- GitHub Actions workflow for PR/push validation
- Individual recipe tests in Docker
- Circular dependency detection
- Integration testing without user passwords
- Local test suite (tests/run-all-tests.sh)

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,24 @@
-data
-source
+# User data (never commit actual configs)
+data/*
+!data/config/
+data/config/*
+!data/config/*.default
+!data/files/
+data/files/*
+!data/files/.ssh/
+data/files/.ssh/*
+!data/files/.ssh/*.default
+!data/files/*.default
+
+# Temporary directories
+source/
+.test/
+.integration-test/
+
+# Runtime files
+.installed_recipes
+*.bak
+
+# Test artifacts
+test-results/
+coverage/
