Add missing default template files for CI testing
- Add data/files/.ssh/config.default for SSH configuration template
- Add data/files/header.bash.default for bash script template
- Update .gitignore to include default template files
- Fixes CI integration test failures

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,10 @@ data/config/*
 !data/config/*.default
 !data/files/
 data/files/*
+!data/files/*.default
+!data/files/.ssh/
+data/files/.ssh/*
+!data/files/.ssh/*.default
 
 # Temporary directories
 source/
