--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,7 @@
 # User data (never commit actual configs)
 data/*
-!data/config/
-data/config/*
 !data/config/*.default
-!data/files/
-data/files/*
-!data/files/.ssh/
-data/files/.ssh/*
-!data/files/.ssh/*.default
+!data/files/.keep
 
 # Temporary directories
 source/
