--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # User data (never commit actual configs)
 data/*
+!data/config/
+data/config/*
 !data/config/*.default
+!data/files/
+data/files/*
 !data/files/.keep
 
 # Temporary directories
