Force workflow cache refresh
- Add comment to force GitHub Actions to use updated workflow
- Previous changes should now take effect in CI

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -75,6 +75,7 @@ jobs:
 
   test-encryption:
     runs-on: ubuntu-latest
+    # Force refresh of workflow cache
     steps:
       - uses: actions/checkout@v4
       
