Add unified resetup command and init functionality
- Create unified resetup command that wraps all operations
- Move individual commands (pack, unpack, refresh, clean) to scripts/ directory
- Add init command to generate default data directory structure
- Simplify .gitignore to exclude entire data/ directory
- Remove default data files from version control (now generated by init)

Benefits:
- Cleaner interface with single entry point
- Better organization of scripts
- On-demand generation of data directory structure
- Simplified gitignore management

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,5 @@
 # User data (never commit actual configs)
-data/*
-!data/config/
-data/config/*
-!data/config/*.default
-!data/files/
-data/files/*
-!data/files/.keep
+data/
 
 # Temporary directories
 source/
