Add bruno/cursor AppImage recipes and flatpak with Gear Lever
- Update bruno recipe to download AppImage to ~/Downloads with --no-sandbox support
- Update cursor recipe to download AppImage to ~/Downloads with sandbox handling notes
- Add flatpak recipe with Gear Lever AppImage integration tool
- Fix environment refresh after dependency installation in recipe execution
- Update test script to dynamically read recipes from recipes.yaml instead of hardcoded list
- Add AppImage management section to README with --no-sandbox usage instructions
- Update recipes.yaml with flatpak recipe and cleaned cursor dependencies

--- a/recipes.yaml
+++ b/recipes.yaml
@@ -34,6 +34,12 @@ recipes:
     dependencies: [base]
     tags: [productivity, system]
     
+  - name: flatpak
+    description: "Flatpak package manager with Gear Lever AppImage integration"
+    script: flatpak.sh
+    dependencies: [base]
+    tags: [productivity, system, appimage]
+    
   - name: cascadia-font
     description: "Cascadia Code Nerd Font for development"
     script: cascadia-font.sh
@@ -130,7 +136,7 @@ recipes:
   - name: cursor
     description: "Cursor AI-powered code editor"
     script: cursor.sh
-    dependencies: [base, appimagelauncher]
+    dependencies: [base]
     tags: [editor, development, ai]
     
   - name: claude-code
