Add Solaar recipe for Logitech peripheral management
- Added solaar.sh recipe script with PPA installation
- Installs Solaar from ppa:solaar-unifying/stable
- Added recipe entry to recipes.yaml with appropriate tags
- Recipe appears in 'Other tools and utilities' section of cookbook.yaml
- Supports both GUI (solaar) and CLI (solaar-cli) interfaces

This enables management of Logitech Unifying wireless devices.

--- a/recipes.yaml
+++ b/recipes.yaml
@@ -197,6 +197,12 @@ recipes:
     dependencies: [base]
     tags: [remote, utility]
     
+  - name: solaar
+    description: "Logitech Unifying device manager"
+    script: solaar.sh
+    dependencies: [base]
+    tags: [utility, hardware, drivers]
+    
   - name: youtube-downloader
     description: "YouTube video downloader"
     script: youtube-downloader.sh
