Add tea recipe for Gitea CLI
- Add tea.sh recipe to install Gitea CLI v0.10.1
- Download prebuilt binary from official Gitea releases
- Install to /usr/local/bin following established patterns
- Add to recipes.yaml with git dependency

--- a/recipes.yaml
+++ b/recipes.yaml
@@ -227,6 +227,12 @@ recipes:
     dependencies: [git]
     tags: [development, git, cli]
     
+  - name: tea
+    description: "Gitea CLI - official Gitea command line tool"
+    script: tea.sh
+    dependencies: [git]
+    tags: [development, git, cli]
+    
   - name: rustdesk
     description: "Open source remote desktop"
     script: rustdesk.sh
