Add mullvad recipe with auto-login functionality

--- a/recipes.yaml
+++ b/recipes.yaml
@@ -262,3 +262,9 @@ recipes:
     script: signal.sh
     dependencies: [base]
     tags: [communication, security]
+    
+  - name: mullvad
+    description: "Mullvad VPN client for privacy and security"
+    script: mullvad.sh
+    dependencies: [base]
+    tags: [security, privacy, vpn]
