Add brave browser recipe with snap and deb fallback
- Create brave.sh recipe script that installs Brave browser
- Primary installation method: snap package
- Fallback method: official Brave repository via .deb
- Add brave recipe to recipes.yaml with browser and privacy tags
- Recipe automatically included in cookbook.yaml template under Browsers section
- Includes Docker/CI environment detection for proper fallback
- Tested successfully in Docker environment

--- a/recipes.yaml
+++ b/recipes.yaml
@@ -95,6 +95,12 @@ recipes:
     dependencies: [base]
     tags: [browser]
     
+  - name: brave
+    description: "Brave browser with privacy features"
+    script: brave.sh
+    dependencies: [base]
+    tags: [browser, privacy]
+    
   # Password management
   - name: 1password
     description: "1Password password manager"
