Ensure SSH recipe is installed before git recipe for repository cloning
- Add ssh dependency to git recipe in recipes.yaml
- This ensures SSH keys are set up before attempting to clone repositories
- Fixes potential authentication issues when cloning private repositories via SSH
- Transitive dependencies: lazygit, gh, and tea recipes now also ensure SSH is available

--- a/recipes.yaml
+++ b/recipes.yaml
@@ -24,7 +24,7 @@ recipes:
   - name: git
     description: "Git configuration with user settings"
     script: git.sh
-    dependencies: [base]
+    dependencies: [base, ssh]
     tags: [core, development]
     
   # Development tools
